--- a/assignment1/GRass1_2016.tex
+++ b/assignment1/GRass1_2016.tex
@@ -247,7 +247,7 @@ Regular vectors transform like
 A^{\alpha'}=\Lambda^{\alpha'}_{\beta}(v)A^{\beta}
 \end{equation}
 
-However, basis vectors transform opppositely; that is
+However, basis vectors transform oppositely; that is
 \begin{equation}
 \vec{e}_{\alpha'}=\Lambda^{\beta}_{\alpha'}\vec{e}_{\beta}
 \end{equation}
@@ -648,7 +648,7 @@ We can calculate the quantities $\vec{a}\cdot\vec{a}$ for both Artemis' and Dian
 \vec{a}'_D\cdot \vec{a}'_D&=g^2(1+gh)^{-2}
 \end{align}
 
-Hence these quanitities $\vec{a}\cdot \vec{a}$ are invariant (in flat spacetime), identical for all coordinate systems. So when calculated in the global inertial reference frame we find
+Hence these quantities $\vec{a}\cdot \vec{a}$ are invariant (in flat spacetime), identical for all coordinate systems. So when calculated in the global inertial reference frame we find
 \begin{align}
 \vec{a}_A\cdot \vec{a}_A &=g^2\\
 \Rightarrow (\text{proper acceleration})_{A}=\lvert\sqrt{\vec{a}_A\cdot \vec{a}_A}\rvert&=g
@@ -684,7 +684,7 @@ so we observe that Artemis and Diana indeed have constant, but different, proper
 t_D(\tau_D)&=(g^{-1}+h)\sinh[(g^{-1}+h)^{-1}\tau_D],\label{eq21}\\
 x_D(\tau_D)&=(g^{-1}+h)\cosh[(g^{-1}+h)^{-1}\tau_D],\label{eq22}
 \end{align}
-ith departure point $(t,x,y,z)=(0,g^{-1}+h,0,0)$. Please note that there are many valid ways to approach this part of the question, e.g. by transforming the relevant vectors from primed to Minkowski coordinates.
+with departure point $(t,x,y,z)=(0,g^{-1}+h,0,0)$. Please note that there are many valid ways to approach this part of the question, e.g. by transforming the relevant vectors from primed to Minkowski coordinates.
 \end{framed}
 
 From a) iii) we have the transformations
