--- a/assignment2/GRass2_2016.tex
+++ b/assignment2/GRass2_2016.tex
@@ -102,7 +102,7 @@ A two-dimensional surface is covered by coordinates $(u,v)$ in the domain $u^2+v
 \begin{align}
 g_{11}&=\frac{a^2(1-v^2)}{(1-u^2-v^2)^2},\label{1eq1}\\
 g_{12}&=\frac{a^2 uv}{(1-u^2-v^2)^2},\\
-g_{22}&=\frac{a^2(1-u^2)}{(1-u^2-v^2)^2},
+g_{22}&=\frac{a^2(1-u^2)}{(1-u^2-v^2)^2},\label{1eq3}
 \end{align}
 the independent components of the inverse metric are given by
 \begin{align}
@@ -117,16 +117,73 @@ and the independent, non-zero Christoffel symbols are given by
 \Gamma^{2}_{12}&=\frac{u}{1-u^2-v^2},\\
 \Gamma^{2}_{22}&=\frac{2v}{1-u^2-v^2}.
 \end{align}
-Rember that $g_{\alpha\beta}$, $g^{\alpha\beta}$, and $\Gamma^{\lambda}_{\alpha\beta}$ are all symmetric in $\alpha$ and $\beta$.
+Remember that $g_{\alpha\beta}$, $g^{\alpha\beta}$, and $\Gamma^{\lambda}_{\alpha\beta}$ are all symmetric in $\alpha$ and $\beta$.
 \end{framed}
 
 \begin{framed}
 \textbf{(a)} Starting from~(\ref{1eq1})-(\ref{1eq6}), derive the expression~(\ref{gamma1 11}) for $\Gamma^{1}_{11}$.
 \end{framed}
 
+We begin with the expression for the Christoffel symbols in terms of the metric
+\begin{equation}
+\Gamma^{\lambda}_{\alpha \beta}=\frac{1}{2}g^{\lambda\mu}\left(g_{\mu\alpha,\beta}+g_{\mu\beta,\alpha}
+-g_{\alpha\beta,\mu}\right)
+\end{equation}
+
+We now calculate the values of $g_{\alpha\beta,\mu}$ from~(\ref{1eq1})-(\ref{1eq3})
+\begin{align}
+g_{11,1}&=\frac{\partial g_{11}}{\partial x^1}=\frac{\partial\left(\frac{a^{2}(1-v^2)}{(1-u^2-v^2)^2}\right)}{\partial u}\\
+&=\frac{4a^2u(1-v^2)}{(1-u^2-v^2)^3}\\
+g_{12,1}&=\frac{\partial g_{12}}{\partial x^1}=\frac{\partial\left(\frac{a^{2}uv}{(1-u^2-v^2)^2}\right)}{\partial u}\\
+&=\frac{a^2 v(3u^2-v^2+1)}{(1-u^2-v^2)^3}\\
+&=g_{21,1}\quad\text{by symmetry}\\
+g_{22,1}&=\frac{\partial g_{22}}{\partial x^1}=\frac{\partial\left(\frac{a^{2}(1-u^2)}{(1-u^2-v^2)^2}\right)}{\partial u}\\
+&=\frac{2a^2u(1-u^2+v^2)}{(1-u^2-v^2)^3}
+\intertext{By inspecting the components of the metric above, we see that $g_{11,1}\mapsto g_{22,2}$ with $u\leftrightarrow v$, similarly $g_{12,1}\mapsto g_{12,2}$ with $u\leftrightarrow v$, and $g_{11,2}\mapsto g_{22,1}$ with $u\leftrightarrow v$. Hence}
+g_{11,2}&=\frac{2a^2v(1-v^2+u^2)}{(1-u^2-v^2)^3}\\
+g_{12,2}&=\frac{a^2 u(3v^2-u^2+1)}{(1-u^2-v^2)^3}\\
+&=g_{21,2}\quad\text{by symmetry}\\
+g_{22,2}&=\frac{4a^2v(1-u^2)}{(1-u^2-v^2)^3}
+\end{align}
+
+So now we can evaluate the Christoffel symbols.
+\begin{align}
+\Gamma^{1}_{11}&=\frac{1}{2}g^{1\mu}\left(g_{\mu 1,1}+g_{\mu 1,1}-g_{11,\mu}\right)\\
+&=\frac{1}{2}\left[g^{11}g_{11,1}+g^{12}\left(2g_{21,1}-g_{11,2}\right)\right]\\
+&=\frac{1}{2}\left[a^{-2}(1-u^2)(1-u^2-v^2)\frac{4a^2u(1-v^2)}{(1-u^2-v^2)^3}\right.\nonumber\\
+&~+\left. -a^{-2}uv(1-u^2-v^2)\left(\frac{2a^2v(3u^2-v^2+1)-2a^2v(1-v^2+u^2)}{(1-u^2-v^2)^3}\right)\right]\\
+&=\frac{1}{2}\left[\frac{(1-u^2)\cdot 4u(1-v^2)-uv\cdot 2v(3u^2-u^2)}{(1-u^2-v^2)^2}\right]\\
+&=\frac{1}{2}\left[\frac{4u(1-u^2)(1-v^2)-4u^2v^2}{(1-u^2-v^2)^2}\right]\\
+&=2u\left[\frac{1-u^2-v^2+\cancel{u^2v^2-u^2v^2}}{(1-u^2-v^2)^2}\right]\\
+&=\frac{2u}{1-u^2-v^2}
+\intertext{as required.}
+\Gamma^{1}_{12}&=\frac{1}{2}g^{1\mu}\left(g_{\mu 1,2}+g_{\mu 2,1}-g_{12,\mu}\right)\\
+&=\frac{1}{2}\left[g^{11} g_{11,2}+g^{12}g_{22,1}\right]\\
+&=\frac{1}{2}\left[a^{-2}(1-u^2)(1-u^2-v^2)\frac{2a^2v(1-v^2+u^2)}{(1-u^2-v^2)^3}\right.\nonumber\\
+&~+\left. -a^{-2}uv(1-u^2-v^2)\frac{2a^2u (1-u^2+v^2)}{(1-u^2-v^2)^3}\right]\\
+&=\frac{1}{2}\left[\frac{(1-u^2)\cdot 2v(1-v^2-u^2)-uv\cdot 2u(1-u^2+v^2)}{(1-u^2-v^2)^2}\right]\\
+&=v\left[\frac{(1-u^2)(1-v^2+u^2)-u^2(1-u^2+v^2)}{(1-u^2-v^2)^2}\right]\\
+&=v\left[\frac{\cancel{1-u^2-v^2}}{(1-u^2-v^2)^{\cancel{2}}}\right]\\
+&=\frac{v}{1-u^2-v^2}
+\intertext{as required.}
+\Gamma^{2}_{12}&=\frac{1}{2}g^{2\mu}\left(g_{\mu 1,2}+g_{\mu 2,1}-g_{12,\mu}\right)\\
+&=\frac{1}{2}\left[g^{21}g_{11,2}+g^{22}g_{22,1}\right]
+\intertext{Now, we deduced earlier that $g_{11,2}=g_{22,1}\rvert_{u\leftrightarrow v}$, we see by inspection of~(\ref{1eq6}) that $g^{22}=g^{11}\rvert_{u\leftrightarrow v}$, and by symmetry of the metric we have $g^{21}=g^{12}$. We note also that $g^{12}$ is symmetric under interchange of $u$ and $v$. Combining these results we find}
+\Gamma^{2}_{12}&=\frac{1}{2}\left[g^{12}g_{22,1}+g^{11}g_{11,2}\right]\rvert_{u\leftrightarrow v}\\
+&=\Gamma^{1}_{12}\rvert_{u\leftrightarrow v}\\
+&=\frac{u}{1-u^2-v^2}
+\end{align}
+
+
+
+\pagebreak %-----------------------------------------------------------
+
 \begin{framed}
 \textbf{(b)} Prove that the Riemann tensor with all indices lowered, $R_{\alpha\beta\gamma\delta}$, contains four nonzero elements, any three of which can be written in terms of the fourth.
 \end{framed}
+
+
+\pagebreak %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{(c)} Prove that, in Klein’s geometry, the Ricci tensor satisfies
@@ -137,6 +194,8 @@ R&=-\frac{2}{a^2}.
 \end{align}
 \end{framed}
 
+\pagebreak %-----------------------------------------------------------
+
 \begin{framed}
 \textbf{(d)} Answer each of the following questions in one or two sentences.
 \end{framed}
@@ -145,21 +204,31 @@ R&=-\frac{2}{a^2}.
 \textbf{i.} In what fundamental way does Klein’s geometry differ from a two-sphere?
 \end{framed}
 
+\pagebreak %-----------------------------------------------------------
+
 \begin{framed}
 \textbf{ii.} The hyperbola $x^2-y^2=1$ is rotated around the $y$-axis to form a three-dimensional hyperboloid of revolution. Does it possess positive or negative curvature? Justify your answer physically with a diagram; do not attempt to calculate anything.
 \end{framed}
+
+\pagebreak %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{iii.} The hyperbola $x^2-y^2=1$ is now rotated around the $x$-axis. What is the sign of the curvature this time? Why?
 \end{framed}
 
+\pagebreak %-----------------------------------------------------------
+
 \begin{framed}
 \textbf{iv.} Setting aside their dimensionality, in what fundamental way do the hyperboloids of revolution in parts (d)(ii) and (d)(iii) differ from Klein's geometry? Justify your answer in words; don’t try to calculate anything.
 \end{framed}
 
+\pagebreak %-----------------------------------------------------------
+
 \begin{framed}
 \textbf{v.} Identify a spacetime manifold, that resembles Klein's geometry. Don’t worry too much about the precise mathematical meaning of ``resembles'', a qualitative justification is fine.
 \end{framed}
+
+\pagebreak %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{(e)} Consider the triangle $\Delta$ABC, whose sides are ``straight lines'' (geodesics) joining the points A$(0,0)$, B$(b,0)$, and C$(0,b)$, with $b<1$. It is easy to show (you don't need to!) that the sides AB and AC are just the curves $v=0$ and $u=0$ respectively.
@@ -169,6 +238,8 @@ R&=-\frac{2}{a^2}.
 \textbf{i.} What is the equation of the geodesic joining B and C?
 \end{framed}
 
+\pagebreak %-----------------------------------------------------------
+
 \begin{framed}
 \textbf{ii.} Prove that the sum of the interior angles of $\Delta$ABC is
 \begin{equation}
@@ -177,13 +248,19 @@ R&=-\frac{2}{a^2}.
 The sum of the angles is less than 180 degrees!
 \end{framed}
 
+\pagebreak %-----------------------------------------------------------
+
 \begin{framed}
 \textbf{iii.} Triangles in Klein’s geometry can have $\sum=0$! Without proof, sketch what such a triangle might look like. Your sketch by necessity will be an incomplete representation; there is no way to draw a Klein triangle faithfully on a flat page.
 \end{framed}
 
+\pagebreak %-----------------------------------------------------------
+
 \begin{framed}
 \textbf{(f) i.} Write down a closed form expression for the area A of $\Delta$ABC as an integral over a subset of the $(u,v)$ domain.
 \end{framed}
+
+\pagebreak %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{ii.} By changing variables to $y=v+u$ and $z=v-u$, recast your integral in the form
@@ -196,9 +273,13 @@ A=a^2(\pi-\Sigma).\label{A(pi,Sigma)}
 \end{equation}
 \end{framed}
 
+\pagebreak %-----------------------------------------------------------
+
 \begin{framed}
 \textbf{iii.} Explain briefly, in one or two sentences, why~(\ref{A(pi,Sigma)}) guarantees the \emph{nonexistence} of similar triangles in Klein’s geometry.
 \end{framed}
+
+\pagebreak %-----------------------------------------------------------
 
 \begin{framed}
 \textbf{(g)} A vector $\vec{W}$ with equal components $W^1$ and $W^2$ at the point $A(0,0)$ is parallel transported along the geodesic AB. Show that its components, when it reaches the point B$(b,0)$, are in the ratio
